1.28.1 2025-11-13
~~~~~~~~~~~~~~~~~

* Fixed regression in HARP 1.25 where performing a point or polygon filter
  during ingestion would result in a segmentation fault if the latitude /
  longitude variables contained single precision floating point values.

1.28 2025-11-10
~~~~~~~~~~~~~~~

* Updates to product ingestions:
  - IASI-NG L2 CLD: added cloud property variables.
  - IASI-NG L2 SFC: renamed dust variable to dust_aerosol_index.
  - IASI-NG L2 SO2: added SO2 column and layer height variables.
  - IASI-NG L2 TCWV: added missing water_vapor_column_density.
  - S5 L1B: updated description clarifying that wavelength values are
    based on evaluating Chebyshev coefficients.
  - S5P L1b: error/noise values of -126 are now mapped to NaN.
  - S5P L2 HCHO/SO2: added scene_albedo and scene_pressure, removed amf
    precission, and added snow_ice_type and sea_ice_fraction.
  - S5P L2 SO2: added 3km so2 type.

1.27 2025-10-13
~~~~~~~~~~~~~~~

* Added support for Sentinel-5 L1B and IASI-NG L2.

* Improve performance of derive() operations to compensate for the
  regression introduced in HARP 1.26.

* harpdump --dataset and .pth files can now contain string values between
  double quotes to store filenames with a comma in them (which is applicable
  for MTG and EPS-SG products such as Sentinel-4 and Sentinel-5).

* Updates to product ingestions:
  - CLOUDNET L2 classification: map time series of sensor position to scalar.
  - GEOMS SONDE: added support for GEOMS-TE-SONDE-O3-003.
  - GOSAT FTS L2: added XCH4/XCO2 variables to ingestion.
  - S5P L2: added land_fraction variable for AAI/ALH/CH4/CO/FRESCO/NO2/O3PR.
  - S5P L2 AER_AI: added s354_388nm_scm option + cloud/albedo variables.
  - S5P L2 FRESCO: added scene_height variables.
  - Sentinel-5 L2: fixed structure and values of datetime variables.

1.26 2025-07-09
~~~~~~~~~~~~~~~

* Added support for Sentinel-5 L2.

* Added derivations to retrieve (dry) air column number density from