@@ -151,19 +151,25 @@
 <td><p>[W/m2/sr/um]</p></td>
 <td><p>radiance</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>brightness_temperature</strong></p></td>
+<tr class="row-odd"><td><p><strong>irradiance</strong></p></td>
+<td><p>double</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[W/m2/um]</p></td>
+<td><p>solar spectral irradiance</p></td>
+</tr>
+<tr class="row-even"><td><p><strong>brightness_temperature</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[K]</p></td>
 <td><p>brightness temperature</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>validity</strong></p></td>
+<tr class="row-odd"><td><p><strong>validity</strong></p></td>
 <td><p>int8</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td></td>
 <td><p>pixel quality status</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>index</strong></p></td>
+<tr class="row-even"><td><p><strong>index</strong></p></td>
 <td><p>int32</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td></td>
@@ -264,6 +270,19 @@
 </tr>
 <tr class="row-even"><td><p><em>description</em></p></td>
 <td><p>&lt;band&gt; is 0 (VIS), 1 (VNIR), 2 (SWIR1), or 3 (SWIR2)</p></td>
+</tr>
+<tr class="row-odd"><td rowspan="4"><p><strong>irradiance</strong></p></td>
+<td><p><em>available</em></p></td>
+<td><p>optional</p></td>
+</tr>
+<tr class="row-even"><td><p><em>condition</em></p></td>
+<td><p>band=VIS, band=VNIR, band=SWIR1, band=SWIR2</p></td>
+</tr>
+<tr class="row-odd"><td><p><em>path</em></p></td>
+<td><p><strong>/ScienceData/solar_spectral_irradiance[&lt;band&gt;,*]</strong></p></td>
+</tr>
+<tr class="row-even"><td><p><em>description</em></p></td>
+<td><p>&lt;band&gt; is 0 (VIS), 1 (VNIR), 2 (SWIR1), or 3 (SWIR2); data is replicated for all scanlines</p></td>
 </tr>
 <tr class="row-odd"><td rowspan="4"><p><strong>brightness_temperature</strong></p></td>
 <td><p><em>available</em></p></td>
