@@ -1,3 +1,6 @@
+* Updates to product ingestions:
+  - EarthCARE L1 MSI: added irradiance variable
+
 1.28.1 2025-11-13
 ~~~~~~~~~~~~~~~~~
 
